форматирование и уточнение gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 logs.root_IS_UNDEFINED/console_executor.log
+config_result.xlsx
+logs.root_IS_UNDEFINED/console-executor-2022-11-04.0.log
+.vscode/launch.json
